--- a/project6/app/templates/_base_template.html
+++ b/project6/app/templates/_base_template.html
@@ -2,41 +2,34 @@
 <html lang="en">
 <head>
 {%- block head %}
-
     <title>{% block title %}{{title|default}}{% endblock title %}</title>
 
     {% block metas %}
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     {% endblock metas %}
 
     {% block styles %}
     <!-- Bootstrap -->
-
-    <link rel="stylesheet" href="{{url_for('static', filename='bootstrap/css/bootstrap.css')}}">
-
-{#    <link rel="stylesheet" href="{{url_for('static', filename='bootstrap/css/bootstrap-theme.min.css')}}">#}
-
+        <link rel="stylesheet" href="{{url_for('static', filename='bootstrap/css/bootstrap.css')}}">
     {% endblock styles %}
 
     {% block script %}
-     <script src="{{url_for('static', filename='bootstrap/jquery.js')}}"></script>
-     <script src="{{url_for('static', filename='bootstrap/js/bootstrap.min.js')}}"></script>
-
-
+         <script src="{{url_for('static', filename='bootstrap/jquery.js')}}"></script>
+         <script src="{{url_for('static', filename='bootstrap/js/bootstrap.min.js')}}"></script>
     {% endblock script %}
-    {% endblock head %}
-
+{% endblock head %}
 </head>
 <body>
-<div class="container-fluid">
-<h1>Welcome to my blog!</h1>
+
+<div class="jumbotron text-center">
+    <h1>Welcome to my blog!</h1>
+</div>
 
     {% block tail %}
-{% endblock %}
+    {% endblock %}
 
-{% block content %}
-{% endblock %}
+    {% block content %}
+    {% endblock %}
 
-</div>
 </body>
 </html>
