--- a/project6/app/templates/home.html
+++ b/project6/app/templates/home.html
@@ -8,48 +8,42 @@
 
 {% block content %}
 
-<div class="row">
-    {% with messages = get_flashed_messages(with_categories=true) %}
-        {% if messages %}
-            <ul class=flashes>
-                {% for category, message in messages %}
-                    <li class="{{ category }}">{{ message }}</li>
-                {% endfor %}
-            </ul>
-        {% endif %}
-    {% endwith %}
-
-    {% from "macros/render_field.html" import render_field %}
-    <form method="POST" action="{{ url_for('home') }}"  type="submit" class="btn btn-default">
-        {{ form.hidden_tag() }}
-        <dl>
-            {% for field in form %}
-                {% if field.id != 'csrf_token' %}
-                    {{ render_field(field) }}
+<div class="container">
+    <div class="row">
+        <div class="col-sm-4">
+            {% with messages = get_flashed_messages(with_categories=true) %}
+                {% if messages %}
+                    <ul class=flashes>
+                        {% for category, message in messages %}
+                            <li class="{{ category }}">{{ message }}</li>
+                        {% endfor %}
+                    </ul>
                 {% endif %}
-            {% endfor %}
-        </dl>
-
-        <input type="submit" value="{{ 'Submit' }}" class="btn">
-    </form>
-
-    <div class="posts" class="row">
-        {% for item in items %}
-            <div class="post">
-                <h3 class="post-title">
-                    {{ item.title }}
-                </h3>
-
-                <h4>{{ item.author }}</h4>
-                <h5>{{ item.time_stamp }}</h5>
-
-                <div class="post-text">
-                    {{ item.text }}
-                </div>
-            </div>
-
-        {% endfor %}
+            {% endwith %}
+            {% from "macros/render_field.html" import render_field %}
+            <form method="POST" action="{{ url_for('home') }}"  type="submit" class="form-horizontal">
+                {{ form.hidden_tag() }}
+                <dl>
+                    {% for field in form %}
+                        {% if field.id != 'csrf_token' %}
+                            {{ render_field(field) }}
+                        {% endif %}
+                    {% endfor %}
+                </dl>
+                <input type="submit" value="{{ 'Submit' }}" class="btn">
+            </form>
+        </div>
     </div>
-
 </div>
+<div class="container">
+    <div class="row">
+    {% for item in items %}
+        <h3 class="post-title">{{ item.title }}</h3>
+        <h4>{{ item.author }}</h4>
+        <h5>{{ item.time_stamp }}</h5>
+        {{ item.text }}
+     {% endfor %}
+    </div>
+</div>
+
 {% endblock %}
