--- a/project7/app/templates/_base_template.html
+++ b/project7/app/templates/_base_template.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 {%- block head %}
-    <title>{% block title %}{{title|default}}{% endblock title %}</title>
+    <title></title>
 
     {% block metas %}
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,20 +13,14 @@
         <link rel="stylesheet" href="{{url_for('static', filename='bootstrap/css/bootstrap.css')}}">
     {% endblock styles %}
 
-    {% block script %}
-         <script src="{{url_for('static', filename='bootstrap/jquery.js')}}"></script>
-         <script src="{{url_for('static', filename='bootstrap/js/bootstrap.min.js')}}"></script>
-    {% endblock script %}
+
 {% endblock head %}
 </head>
 <body>
 
 <div class="jumbotron text-center">
-    <h1>Welcome to my blog!</h1>
+    <h1>QR-code generation!</h1>
 </div>
-
-    {% block tail %}
-    {% endblock %}
 
     {% block content %}
     {% endblock %}
