--- a/project8/templates/_base_template.html
+++ b/project8/templates/_base_template.html
@@ -1,14 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Flask database example</title>
+{%- block head %}
+    <title>{% block title %}{{title|default}}{% endblock title %}</title>
+
+    {% block metas %}
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    {% endblock metas %}
+
+    {% block styles %}
+    <!-- Bootstrap -->
+        <link rel="stylesheet" href="{{url_for('.static', filename='bootstrap/css/bootstrap.css')}}">
+    {% endblock styles %}
+
+    {% block script %}
+         <script src="{{url_for('.static', filename='bootstrap/jquery.js')}}"></script>
+         <script src="{{url_for('.static', filename='bootstrap/js/bootstrap.min.js')}}"></script>
+    {% endblock script %}
+{% endblock head %}
+
 </head>
 <body>
 
-<h1>Welcome to my blog with database!</h1>
+<div class="jumbotron text-center">
+    <h1>Welcome to my blog with database!</h1>
+</div>
 
 {% block content %}
+{% endblock %}
+
+{% block tail %}
 {% endblock %}
 
 </body>
