--- a/project8/app/templates/avatar.html
+++ b/project8/app/templates/avatar.html
@@ -1,9 +1,8 @@
 {% extends '_base_template.html' %}
-{% import 'wtf_tinymce/editor.html' as tinymce with context %}
-
+{% import "bootstrap/wtf.html" as wtf %}
 {% block content %}
-
-<div class="content">
+<div class="container">
+    <div class="row">
     {% with messages = get_flashed_messages(with_categories=true) %}
         {% if messages %}
             <ul class=flashes>
@@ -13,47 +12,34 @@
             </ul>
         {% endif %}
     {% endwith %}
-
+</div>
+</div>
+    <div class="container">
+    <div class="row">
     {% from "macros/render_field.html" import render_field %}
-    <form method="POST" action="{{ url_for('post_with_form') }}">
+    <form class="form" role="form" method="POST" enctype="multipart/form-data" action="{{ url_for('avatar') }}">
         {{ form.hidden_tag() }}
         <dl>
             {% for field in form %}
                 {% if field.id != 'csrf_token' %}
-                    {{ render_field(field) }}
+                    {{ wtf.form_field(field) }}
                 {% endif %}
             {% endfor %}
         </dl>
-
         <input type="submit" value="{{ 'Submit' }}" class="btn">
     </form>
-
-    <div class="posts">
-        {% for item in posts %}
-            <div class="post">
-                <h3 class="post-title">
-                    {{ item.title }}
-                </h3>
-
-                <h4>{{ item.user.username }}</h4>
-                <h5>{{ item.date_created }}</h5>
-
-                <div class="post-text">
-                    {{ item.content | safe}}
-                </div>
+    </div>
+</div>
+<div class="container">
+    <div class="row">
+        {% for item in avatars %}
+            <div class="user">
+                <h3> {{ item.name }} </h3>
+                <h4> {{ item.filename }} </h4>
             </div>
-
         {% endfor %}
 
-
-
     </div>
-
 </div>
 
-{% endblock %}
-
-{% block tail %}
-    {{ super() }}
-    {{ tinymce.init_wtf_tinymce() }}
 {% endblock %}
