--- a/project8/app/templates/user.html
+++ b/project8/app/templates/user.html
@@ -1,4 +1,5 @@
 {% extends '_base_template.html' %}
+{% import "bootstrap/wtf.html" as wtf %}
 {% block content %}
 <div class="container">
     <div class="row">
@@ -11,14 +12,17 @@
             </ul>
         {% endif %}
     {% endwith %}
-
+</div>
+</div>
+    <div class="container">
+    <div class="row">
     {% from "macros/render_field.html" import render_field %}
-    <form class="form form-horizontal" role="form" method="POST" action="{{ url_for('usr_with_forms') }}">
+    <form class="form" role="form" method="POST" action="{{ url_for('user') }}">
         {{ form.hidden_tag() }}
         <dl>
             {% for field in form %}
                 {% if field.id != 'csrf_token' %}
-                    {{ render_field(field) }}
+                    {{ wtf.form_field(field) }}
                 {% endif %}
             {% endfor %}
         </dl>
@@ -30,7 +34,7 @@
     <div class="row">
         {% for item in user %}
             <div class="user">
-                <h3> {{ item.username }} </h3>
+                <h3> {{ item.name }} </h3>
                 <h4> {{ item.email }} </h4>
                 <h4> {{ item.birth_date }} </h4>
             </div>
