--- a/project9/app/templates/macros/render_field.html
+++ b/project9/app/templates/macros/render_field.html
@@ -77,7 +77,7 @@
     #}
 {% macro render_form(form, action_url='', action_text='Submit', class_='', btn_class='btn btn-default') -%}
 
-    <form method="POST" action="{{ action_url }}" role="form" class="{{ class_ }}">
+    <form method="POST" action="{{ action_url }}" role="form" class="form">
         {{ form.hidden_tag() if form.hidden_tag }}
         {% if caller %}
             {{ caller() }}
