--- a/project9/app/templates/all_posts.html
+++ b/project9/app/templates/all_posts.html
@@ -4,24 +4,6 @@
 
 <div class="container">
     <div class="row">
-        {% from "macros/render_field.html" import render_field %}
-        <form class="form" method="POST" action="{{ url_for('profile_route.profile') }}">
-            {{ form.hidden_tag() }}
-                <dl>
-                    {% for field in form %}
-                        {% if field.id != 'csrf_token' %}
-                            {{ field.label }}
-                            {{ field() }}
-                        {% endif %}
-                    {% endfor %}
-                </dl>
-            <input type="submit" value="{{ 'Submit' }}" class="btn">
-        </form>
-    </div>
-</div>
-    <div class="container col-md-2"><div class="row"></div></div>
-<div class="container">
-    <div class="row">
         <div class="col-md-2">
             {% for item in avatar %}
             <img class="img-circle" src="/upload/avatar/{{ item.filename }}" width="100" height="100"></img>
@@ -39,7 +21,7 @@
 <div class="container">
     <div class="row">
         {% for item in posts %}
-            <div class="post">
+            <div class="post {{ item.id }}">
                 <h3 class="post-title">
                     {{ item.title }}
                 </h3>
